# asn_compiler

./: .gitignore  CMakeLists.txt  CONTRIBUTORS  IMPLEMENTATION.md  LICENSE  README.md  USERGUIDE.md  compile.sh
.claude/: settings.local.json
.claude/commands/: asn-compiler.md
include/codegen/: Formatter.h  TemplateManager.h  TypeMap.h
include/codegen/c/: CCodecEmitter.h  CEmitter.h
include/codegen/cpp/: CodecEmitter.h  CppEmitter.h  JsonEmitter.h
include/frontend/: AsnLexer.h  AsnNode.h  AsnParser.h  AsnTypeInfo.h  ConstraintResolver.h  ParseUtils.h  SourceLocation.h  SymbolTable.h  Token.h
include/runtime/aper/: AperInteger.h
include/runtime/c/: asn1_bitreader.h  asn1_bitwriter.h  asn1_uper.h
include/runtime/core/: BitReader.h  BitString.h  BitUtils.h  BitWriter.h  ExtensionValue.h  ObjectIdentifier.h
include/runtime/uper/: RangeUtils.h  UperChoice.h  UperExtension.h  UperInteger.h  UperLength.h  UperObjectIdentifier.h  UperReal.h  UperSequence.h
include/utils/: 3GppHexTests.h  CompareUtils.h  FileLoader.h  Logger.h  TestFramework.h
schemas/: e1ap_15.4.asn1  test.asn
src/codegen/: CMakeLists.txt  Formatter.cpp  TemplateManager.cpp  TypeMap.cpp
src/codegen/c/: CCodecEmitter.cpp  CEmitter.cpp  CMakeLists.txt
src/codegen/cpp/: CMakeLists.txt  CodecEmitter.cpp  CppEmitter.cpp  JsonEmitter.cpp
src/frontend/: AsnLexer.cpp  AsnNode.cpp  AsnParser.cpp  CMakeLists.txt  ConstraintResolver.cpp  ParseUtils.cpp  SourceLocation.cpp  SymbolTable.cpp  Token.cpp
src/runtime/: CMakeLists.txt
src/runtime/aper/: AperInteger.cpp  CMakeLists.txt
src/runtime/c/: CMakeLists.txt  asn1_bitreader.c  asn1_bitwriter.c  asn1_uper.c
src/runtime/core/: BitReader.cpp  BitUtils.cpp  BitWriter.cpp  CMakeLists.txt
src/runtime/uper/: CMakeLists.txt  RangeUtils.cpp  UperChoice.cpp  UperExtension.cpp  UperInteger.cpp  UperLength.cpp  UperObjectIdentifier.cpp  UperReal.cpp  UperSequence.cpp
src/utils/: CMakeLists.txt  CompareUtils.cpp  CompilerMain.cpp  FileLoader.cpp  Logger.cpp  TestFramework.cpp
tests/: 3GppHexTests.cpp  3GppHexTests.h  CMakeLists.txt  TagResolver.cpp  TagResolver.h  main.cpp  test_bitstream.cpp  test_codecs.cpp  test_lexer.cpp  test_parser.cpp  test_resolver.cpp  test_utils.cpp  tests.h
tests/e1ap_15.4/: test_e1ap_15_4_aper.cpp
tests/nr-rrc-15.6.0/: test_nr_rrc_15_6_0.cpp  test_nr_rrc_15_6_0_c.c
